environments/dev/patches/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-bff
spec:
  template:
    spec:
      containers:
        - name: storefront-bff
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-bff
spec:
  template:
    spec:
      containers:
        - name: backoffice-bff
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  template:
    spec:
      containers:
        - name: product
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
spec:
  template:
    spec:
      containers:
        - name: media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
spec:
  template:
    spec:
      containers:
        - name: cart
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
spec:
  template:
    spec:
      containers:
        - name: customer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  template:
    spec:
      containers:
        - name: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  template:
    spec:
      containers:
        - name: inventory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  template:
    spec:
      containers:
        - name: payment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tax
spec:
  template:
    spec:
      containers:
        - name: tax
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  template:
    spec:
      containers:
        - name: search
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampledata
spec:
  template:
    spec:
      containers:
        - name: sampledata
